--- a/tensorflow/mnist1.ipynb
+++ b/tensorflow/mnist1.ipynb
@@ -283,6 +283,17 @@
    "source": [
     "print(accuracy.eval(feed_dict={x: mnist.test.images, y_: mnist.test.labels}))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sess.close()"
+   ]
   }
  ],
  "metadata": {
