--- a/tensorflow/mnist2.ipynb
+++ b/tensorflow/mnist2.ipynb
@@ -438,6 +438,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "from random import randint\n",
+    "num = randint(0, mnist.test.images.shape[0])\n",
+    "img = mnist.test.images[num]\n",
+    "\n",
+    "classification = sess.run(tf.argmax(y, 1), feed_dict={x: [img]})\n",
+    "plt.imshow(img.reshape(28, 28), cmap=plt.cm.binary)\n",
+    "plt.show()\n",
+    "print 'NN predicted', classification[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false
