tensor-installation.sh changed

--- a/word2vec/word2vec_basic.ipynb
+++ b/word2vec/word2vec_basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -65,8 +65,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "necessary data \n",
+    "1. dictionary : UNK (unknown token)\n",
+    "2. word index(dictionary) \n",
+    "3. word count(each word)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -76,6 +86,7 @@
      "output_type": "stream",
      "text": [
       "Data size 17005207\n",
+      "4th word in the words list: term\n",
       "Most common words (+UNK) [['UNK', 418391], ('the', 1061396), ('of', 593677), ('and', 416629), ('one', 411764)]\n",
       "Sample data [5239, 3084, 12, 6, 195, 2, 3137, 46, 59, 156]\n"
      ]
@@ -98,12 +109,16 @@
     "def build_dataset(words):\n",
     "  count = [['UNK', -1]]\n",
     "  count.extend(collections.Counter(words).most_common(vocabulary_size - 1))\n",
+    "    \n",
     "  dictionary = dict()\n",
+    "\n",
     "  for word, _ in count:\n",
+    "        \n",
     "    dictionary[word] = len(dictionary)\n",
     "    \n",
     "  data = list()\n",
     "  unk_count = 0\n",
+    "    \n",
     "  for word in words:\n",
     "    if word in dictionary:\n",
     "      index = dictionary[word]\n",
@@ -112,10 +127,12 @@
     "      unk_count += 1\n",
     "    data.append(index)\n",
     "  count[0][1] = unk_count\n",
+    "\n",
     "  reverse_dictionary = dict(zip(dictionary.values(), dictionary.keys()))\n",
     "  return data, count, dictionary, reverse_dictionary\n",
     "\n",
     "data, count, dictionary, reverse_dictionary = build_dataset(words)\n",
+    "print('4th word in the words list:', words[4])\n",
     "del words  # Hint to reduce memory.\n",
     "print('Most common words (+UNK)', count[:5])\n",
     "print('Sample data', data[:10])\n",
@@ -125,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -134,19 +151,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "50000\n"
+      "195\n"
      ]
     }
    ],
    "source": [
-    "print(dictionary[\"one\"])\n",
-    "print(len(dictionary))"
+    "print(dictionary[\"term\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -155,22 +170,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3084 -> 5239\n",
-      "originated -> anarchism\n",
-      "3084 -> 12\n",
-      "originated -> as\n",
-      "12 -> 6\n",
-      "as -> a\n",
-      "12 -> 3084\n",
-      "as -> originated\n",
-      "6 -> 195\n",
-      "a -> term\n",
-      "6 -> 12\n",
-      "a -> as\n",
-      "195 -> 2\n",
-      "term -> of\n",
-      "195 -> 6\n",
-      "term -> a\n"
+      "data_index is:  15\n",
+      "data_index is:  16\n",
+      "data_index is:  17\n",
+      "1 -> 27549\n",
+      "the -> diggers\n",
+      "1 -> 134\n",
+      "the -> including\n",
+      "27549 -> 2\n",
+      "diggers -> of\n",
+      "27549 -> 1\n",
+      "diggers -> the\n",
+      "2 -> 27549\n",
+      "of -> diggers\n",
+      "2 -> 1\n",
+      "of -> the\n",
+      "1 -> 2\n",
+      "the -> of\n",
+      "1 -> 103\n",
+      "the -> english\n"
      ]
     }
    ],
@@ -178,15 +196,23 @@
     "# Step 3: Function to generate a training batch for the skip-gram model.\n",
     "def generate_batch(batch_size, num_skips, skip_window):\n",
     "  global data_index\n",
+    "\n",
     "  assert batch_size % num_skips == 0\n",
     "  assert num_skips <= 2 * skip_window\n",
+    "\n",
     "  batch = np.ndarray(shape=(batch_size), dtype=np.int32)\n",
     "  labels = np.ndarray(shape=(batch_size, 1), dtype=np.int32)\n",
+    "\n",
     "  span = 2 * skip_window + 1 # [ skip_window target skip_window ]\n",
+    "    \n",
     "  buffer = collections.deque(maxlen=span)\n",
+    "\n",
     "  for _ in range(span):\n",
     "    buffer.append(data[data_index])\n",
     "    data_index = (data_index + 1) % len(data)\n",
+    "    print('data_index is: ',data_index)\n",
+    "    \n",
+    "    \n",
     "  for i in range(batch_size // num_skips):\n",
     "    target = skip_window  # target label at the center of the buffer\n",
     "    targets_to_avoid = [ skip_window ]\n",
@@ -201,10 +227,10 @@
     "  return batch, labels\n",
     "\n",
     "batch, labels = generate_batch(batch_size=8, num_skips=2, skip_window=1)\n",
+    "\n",
     "for i in range(8):\n",
     "  print(batch[i], '->', labels[i, 0])\n",
-    "  print(reverse_dictionary[batch[i]], '->', reverse_dictionary[labels[i, 0]])\n",
-    "    "
+    "  print(reverse_dictionary[batch[i]], '->', reverse_dictionary[labels[i, 0]])\n"
    ]
   },
   {
