tensor-installation changed

--- a/word2vec/maybe_tensor.ipynb
+++ b/word2vec/maybe_tensor.ipynb
@@ -48,8 +48,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "a= np.ndarray(shape=(8), dtype=np.int32)\n",
     "b= np.ndarray(shape=(8,1), dtype=np.int32)\n",
     "\n",
@@ -243,6 +241,25 @@
     "scatter(X_tsne[:, 0], X_tsne[:, 1], c=iris.target)\n",
     "subplot(122)\n",
     "scatter(X_pca[:, 0], X_pca[:, 1], c=iris.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1048576\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.power(2,20))"
    ]
   },
   {
