--- a/tensorflow/Untitled.ipynb
+++ b/tensorflow/Untitled.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import mnist_basic"
+    "import os\n",
+    "\n",
+    "os.chdir('/tmp')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -22,16 +24,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
-      "0.919\n"
+      "/tmp\n"
      ]
     }
    ],
    "source": [
-    "execfile(\"mnist_basic.py\")"
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named sh",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-56d4c9e4a863>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msh\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcd\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mls\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mcd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'/tmp'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mls\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: No module named sh"
+     ]
+    }
+   ],
+   "source": [
+    "from sh import cd, ls\n",
+    "\n",
+    "cd('/tmp')\n",
+    "print ls()"
    ]
   },
   {
