--- a/tensorflow/extension.ipynb
+++ b/tensorflow/extension.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-05-17T06:31:05.564549",
+     "start_time": "2016-05-17T06:31:05.526053"
+    },
     "collapsed": false
    },
    "outputs": [
@@ -13,7 +17,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,6 +26,33 @@
     "import notebook\n",
     "notebook.nbextensions.check_nbextension('usability/codefolding', user=True)\n",
     "notebook.nbextensions.check_nbextension('usability/codefolding/main.js', user=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-05-17T06:31:01.833001",
+     "start_time": "2016-05-17T06:31:01.768965"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named tensorflow",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-a649b509054f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m: No module named tensorflow"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow"
    ]
   },
   {
@@ -35,6 +66,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
@@ -51,6 +83,12 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.11"
+  },
+  "toc": {
+   "toc_cell": false,
+   "toc_number_sections": true,
+   "toc_threshold": 6,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
