--- a/tensorflow/plotly.ipynb
+++ b/tensorflow/plotly.ipynb
@@ -12,6 +12,11 @@
     "collapsed": false,
     "nbpresent": {
      "id": "c3714051-fe7d-4df2-a71f-4d3ee365931d"
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {}
+     }
     }
    },
    "outputs": [
@@ -57,6 +62,11 @@
     "collapsed": false,
     "nbpresent": {
      "id": "37e5245d-aaeb-48de-bcc2-b06bb795bc48"
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {}
+     }
     }
    },
    "outputs": [
@@ -86,7 +96,12 @@
     "nbpresent": {
      "id": "e45ce52a-d2dd-4a85-8e3c-852acfa5abcd"
     },
-    "scrolled": false
+    "scrolled": false,
+    "urth": {
+     "dashboard": {
+      "layout": {}
+     }
+    }
    },
    "outputs": [
     {
@@ -199,6 +214,11 @@
     "collapsed": false,
     "nbpresent": {
      "id": "37345baf-f7ba-4be3-9fc7-02591c764a89"
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {}
+     }
     }
    },
    "outputs": [
@@ -329,6 +349,11 @@
     "collapsed": false,
     "nbpresent": {
      "id": "60a9fc50-5ae5-4f87-8b78-f0f670f20e03"
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {}
+     }
     }
    },
    "outputs": [
@@ -357,6 +382,11 @@
     "collapsed": false,
     "nbpresent": {
      "id": "09316def-6bec-4680-8bb1-73f4fa78488e"
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {}
+     }
     }
    },
    "outputs": [
@@ -517,6 +547,12 @@
     "collapsed": true,
     "nbpresent": {
      "id": "73e68309-7cb1-4afe-958e-1fb55bbf034e"
+    },
+    "urth": {
+     "dashboard": {
+      "hidden": true,
+      "layout": {}
+     }
     }
    },
    "outputs": [],
@@ -658,6 +694,11 @@
    "toc_section_display": "block",
    "toc_threshold": 6,
    "toc_window_display": false
+  },
+  "urth": {
+   "dashboard": {
+    "layout": "report"
+   }
   }
  },
  "nbformat": 4,
