sub_installation addded

--- a/tensorflow/Untitled.ipynb
+++ b/tensorflow/Untitled.ipynb
@@ -8,11 +8,22 @@
      "end_time": "2016-05-19T04:22:14.944780",
      "start_time": "2016-05-19T04:22:13.866390"
     },
-    "collapsed": false
+    "collapsed": false,
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 4,
+       "row": 0,
+       "width": 12
+      }
+     }
+    }
    },
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "<div class=\"burk\">\n",
+    "import tensorflow as tf</div><i class=\"fa fa-lightbulb-o \"></i>"
    ]
   },
   {
@@ -23,7 +34,17 @@
      "end_time": "2016-05-19T05:12:33.722468",
      "start_time": "2016-05-19T05:12:33.651573"
     },
-    "collapsed": false
+    "collapsed": false,
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 4,
+       "row": 4,
+       "width": 12
+      }
+     }
+    }
    },
    "outputs": [
     {
@@ -48,7 +69,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 4,
+       "row": 8,
+       "width": 12
+      }
+     }
+    }
    },
    "outputs": [],
    "source": []
@@ -78,6 +109,22 @@
    "toc_number_sections": true,
    "toc_threshold": 6,
    "toc_window_display": false
+  },
+  "urth": {
+   "dashboard": {
+    "cellMargin": 10,
+    "defaultCellHeight": 20,
+    "layout": "grid",
+    "maxColumns": 12
+   }
+  },
+  "widgets": {
+   "state": {
+    "7B1AC835AB454825807D0655BAB10CC4": {
+     "views": []
+    }
+   },
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
