--- a/tensorflow/Untitled.ipynb
+++ b/tensorflow/Untitled.ipynb
@@ -67,9 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2016-06-03T04:44:47.005750",
+     "start_time": "2016-06-03T04:44:46.989138"
+    },
+    "collapsed": false,
     "urth": {
      "dashboard": {
       "layout": {
@@ -81,6 +85,26 @@
      }
     }
    },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-848841d6875f>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-848841d6875f>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    from imposm.parser\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imposm.parser "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -91,18 +115,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
   },
   "toc": {
    "toc_cell": false,
@@ -120,7 +132,7 @@
   },
   "widgets": {
    "state": {
-    "7B1AC835AB454825807D0655BAB10CC4": {
+    "F8E5FE5507904A9A9E0B43124AB24AEE": {
      "views": []
     }
    },
