--- a/tensorflow/Untitled.ipynb
+++ b/tensorflow/Untitled.ipynb
@@ -116,6 +116,18 @@
    "language": "python",
    "name": "python2"
   },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
+  },
   "toc": {
    "toc_cell": false,
    "toc_number_sections": true,
@@ -132,7 +144,7 @@
   },
   "widgets": {
    "state": {
-    "F8E5FE5507904A9A9E0B43124AB24AEE": {
+    "5F3E3E33D822444F84A4E87D46168C25": {
      "views": []
     }
    },
