readme.md fixed

--- a/tensorflow/Untitled.ipynb
+++ b/tensorflow/Untitled.ipynb
@@ -101,6 +101,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-07-28T12:50:43.343829",
+     "start_time": "2016-07-28T12:50:37.218657"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from numba import jit"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -126,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   },
   "toc": {
    "toc_cell": false,
@@ -144,7 +159,7 @@
   },
   "widgets": {
    "state": {
-    "5F3E3E33D822444F84A4E87D46168C25": {
+    "B63DD3A01FB9491981E9B2813E6BD329": {
      "views": []
     }
    },
