--- a/tensorflow/differenciation.ipynb
+++ b/tensorflow/differenciation.ipynb
@@ -252,6 +252,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
@@ -267,7 +268,21 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
+  },
+  "toc": {
+   "toc_cell": false,
+   "toc_number_sections": true,
+   "toc_threshold": 6,
+   "toc_window_display": false
+  },
+  "widgets": {
+   "state": {
+    "CE96C161C17746FE8E27BA8DB4257944": {
+     "views": []
+    }
+   },
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
