--- a/tensorflow/word2vec_basic.ipynb
+++ b/tensorflow/word2vec_basic.ipynb
@@ -727,6 +727,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
@@ -742,7 +743,21 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
+  },
+  "toc": {
+   "toc_cell": false,
+   "toc_number_sections": true,
+   "toc_threshold": 6,
+   "toc_window_display": false
+  },
+  "widgets": {
+   "state": {
+    "3BA0BE5F5AAF45CCA39606A6ADD41481": {
+     "views": []
+    }
+   },
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
