--- a/tensorflow/extension.ipynb
+++ b/tensorflow/extension.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2016-05-17T06:31:05.564549",
-     "start_time": "2016-05-17T06:31:05.526053"
+     "end_time": "2016-07-30T11:54:54.097160",
+     "start_time": "2016-07-30T11:54:54.018900"
     },
     "collapsed": false
    },
@@ -17,7 +17,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,39 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2016-05-17T06:31:01.833001",
-     "start_time": "2016-05-17T06:31:01.768965"
+     "end_time": "2016-07-30T11:54:59.205990",
+     "start_time": "2016-07-30T11:54:57.620420"
     },
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named tensorflow",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-a649b509054f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m: No module named tensorflow"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -82,13 +61,21 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   },
   "toc": {
    "toc_cell": false,
    "toc_number_sections": true,
    "toc_threshold": 6,
    "toc_window_display": false
+  },
+  "widgets": {
+   "state": {
+    "E7B21694E943459D850C6B9EAD064B16": {
+     "views": []
+    }
+   },
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
