--- a/tensorflow/plotly.ipynb
+++ b/tensorflow/plotly.ipynb
@@ -583,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   },
   "nbpresent": {
    "slides": {},
@@ -699,6 +699,14 @@
    "dashboard": {
     "layout": "report"
    }
+  },
+  "widgets": {
+   "state": {
+    "F1775838BD0D4982853C4F350966826C": {
+     "views": []
+    }
+   },
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
